fix: visibility promo header background video

--- a/sass/base/components/promo-header/_promo-header.scss
+++ b/sass/base/components/promo-header/_promo-header.scss
@@ -78,6 +78,10 @@
   .video {
     position: relative !important;
     height: 100%;
+
+    video {
+      visibility: visible !important;
+    }
   }
   &.promo-header--small {
     height: 400px;
